--- a/Modulo conserje/modulo conserje.css
+++ b/Modulo conserje/modulo conserje.css
@@ -145,3 +145,12 @@ padding: 20px 45px 20px 20px;
 
 
 
+.titulo{
+    text-align: center;
+    font-family: 'Bebas Neue', sans-serif;
+    font-size: 40px;
+    color: #0f0404;
+    padding: 10px 10px ;
+    margin: auto;
+    cursor: pointer;
+    }
