--- a/Modulo propietario/Menu propietario/ver anuncios.css
+++ b/Modulo propietario/Menu propietario/ver anuncios.css
@@ -6,13 +6,15 @@
 
 /* codigo opcionla */
 body{
-   
+    background-color: #faf0e680;
     
 }
 
 /*primera imagen*/
 
-
+.div-form{
+    margin: 60px auto;
+}
 
 .container{
     width: 100%;
@@ -21,11 +23,14 @@ body{
     align-items: center;
     font-family: sans-serif;
      max-width: 1000px;
+     height:auto;
     
     
 }
 
-
+p{
+    display: inline-block;
+}
 .card{
     overflow: auto;
     width: 100%;
@@ -36,10 +41,14 @@ body{
     box-shadow: 0px 1px 10px rgba(0,0,0,0,2);
     cursor: default;
     transition: all 400ms ease;
-    border: 1px solid;
-    
-    
-    
+     outline: 1px solid rgba(0, 0, 0, 0.384);   
+}
+
+.card::-webkit-scrollbar{
+width: 5px;
+background-color:#6cce7c ;
+border-radius: 5px
+
 }
 .card:hover{
     box-shadow: 5px 5px 20px rgba(0,0,0,0,4);
@@ -69,13 +78,14 @@ body{
     display: inline-block;
     padding: 10px;
     margin-top: 10px;
-    color: #2fb4cc;
-    border: solid 1px #2fb4cc;
+    font-family:'Bebas Neue', sans-serif; 
+    color: #6cce7c;
+    border: solid 1px #6cce7c;
     border-radius: 4px;
     transition: all 400ms ease;
 }
 .card .contenido a:hover{
-   background-color: #2fb4cc; 
+   background-color: #6cce7c; 
    color:#fff
 }
 
@@ -122,24 +132,27 @@ body{
     color: #fff;
     
     }
-    .titulo-anuncios{
-        margin-top: 100px;
+    /*.titulo-anuncios{
+        margin-top: 50px;
         font-family:'Bebas Neue', sans-serif; 
         text-align: center;
         font-size: 30px;
-    }
+    }*/
    
 @media screen and (max-width:768px){
     .container{
         width: 100%;
-        height: 200px;
+        height: auto;
         display: flex;
         flex-wrap: wrap;
         justify-content: center;
         align-items: center;
+        
         }
         
-      
+       
+            
+           
         .card img{
             width: 100%;
             height: 280px;
